--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "license": "MIT",
     "dependencies": {
         "@types/node": "^22.7.4",
-        "typescript": "^5.6.2"
+        "commander": "^12.1.0",
+        "dotenv": "^16.4.5",
+        "moment": "^2.30.1",
+        "typescript": "^5.6.2",
+        "youtrack-rest-client": "^1.6.0"
     },
     "devDependencies": {
+        "@types/dotenv": "^8.2.0",
         "ts-node": "^10.9.2"
     },
     "scripts": {
